--- a/render.yaml
+++ b/render.yaml
@@ -15,10 +15,7 @@ services:
       - key: APP_KEY
         generateValue: true
       - key: APP_URL
-        fromService:
-          type: web
-          name: fitlife-gym
-          property: url
+        value: https://fitlife-gym.onrender.com
       - key: DB_CONNECTION
         value: mysql
       - key: DB_HOST
